2010-12-16  Carlos Garcia Campos  <cgarcia@igalia.com>

Reviewed by Martin Robinson.

        [Gtk] scrolling artifacts
        https://bugs.webkit.org/show_bug.cgi?id=45029

        Call gdk_window_process_updates() right after moving the window
        when scrolling.

        * WebCoreSupport/ChromeClientGtk.cpp:
        (WebKit::ChromeClient::scroll):

Canonical link: https://commits.webkit.org/64543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74196 268f45cc-cd09-0410-ab3c-d52691b4dbfc